# focoos

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  eomt.ipynb  index.html  mkdocs.yaml  objects.inv  pyproject.toml  ray-config.yaml  ray-serve.py  sitemap.xml  todo.md  tox.ini
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.devcontainer/gpu-base/: devcontainer.json
.devcontainer/gpu-tenosrrt/: devcontainer.json
.devcontainer/gpu-torch/: devcontainer.json
.devcontainer/tenosrrt/: devcontainer.json
.devcontainer/tensorrt/: devcontainer.json
.github/workflows/: release.yml  test.yml
api/auto_dataset/: index.html
api/base_model/: index.html
api/cli/: index.html
api/config/: index.html
api/focoos/: index.html
api/focoos_model/: index.html
api/hub/: index.html
api/infer_model/: index.html
api/local_model/: index.html
api/model_manager/: index.html
api/model_registry/: index.html
api/ports/: index.html
api/processor/: index.html
api/remote_dataset/: index.html
api/remote_model/: index.html
api/runtime/: index.html
api/runtimes/: index.html
api/trainer_evaluation/: index.html
api/trainer_hooks/: index.html
apps/: benchmark.py
cli/: index.html
concepts/: index.html
datasets/: index.html
demo/: .monitor.ipynb  dataset.py  datasets.ipynb  demo.ipynb  utils.py
development/changelog/: index.html
development/code_of_conduct/: index.html
development/contributing/: index.html
docs/: cli.md  concepts.md  datasets.md  index.md  inference.md  models.md  quantization.md  setup.md  training.md
docs/api/: auto_dataset.md  base_model.md  cli.md  config.md  focoos.md  focoos_model.md  hub.md  infer_model.md  local_model.md  model_manager.md  model_registry.md  ports.md  processor.md  remote_dataset.md  remote_model.md  runtime.md  runtimes.md  trainer_evaluation.md  trainer_hooks.md
docs/development/: changelog.md
docs/examples/: cloud_inference.md  cloud_training.md  datasets.md  gradio.md  local_inference.md  model_metrics.md  user.md
docs/getting_started/: installation.md  introduction.md  quickstart.md  setup.md
docs/helpers/: wip.md
docs/how_to/: cloud_training.md  dashboard.md  datasets.md  inference.md  user.md
docs/howto/: create_dataset.md  manage_models.md  manage_user.md  personalize_model.md  use_model.md
docs/hub/: hub.md  overview.md  remote_inference.md
docs/models/: bisenetformer.md  fai-bf-m-ade.md  fai-cls.md  fai-detr-l-coco.md  fai-detr-l-obj365.md  fai-detr-m-coco.md  fai-detr-n-coco.md  fai-detr-s-coco.md  fai-detr.md  fai-m2f-l-ade.md  fai-m2f-l-coco-ins.md  fai-m2f-m-ade.md  fai-m2f-m-coco-ins.md  fai-m2f-s-ade.md  fai-m2f-s-coco-ins.md  fai-mf-l-ade.md  fai-mf-l-coco-ins.md  fai-mf-m-ade.md  fai-mf-s-ade.md  fai-pem-m-ade.md  fai-rtdetr-l-coco.md  fai-rtdetr-m-coco.md  fai-rtdetr-m-obj365.md  fai-rtdetr-n-coco.md  fai-rtdetr-s-coco.md  fai_cls.md  fai_detr.md  fai_mf.md  index.md  make_classes.py  metrics.json  models.md  plot.py  rtmo.md
focoos/: __init__.py  auto_model.py  cloud_model.py  config.py  focoos.py  local_model.py  model.py  model_manager.py  model_registry.py  ports.py  project.py  remote_dataset.py  remote_model.py  runtime.py  structures.py
focoos/cli/: README.md  __init__.py  cli.py  gradio_app.py
focoos/data/: __init__.py  auto_dataset.py  class_names.py  converters.py  default_aug.py  loaders.py  samplers.py  utils.py
focoos/evaluation/: detection_evaluation.py  evaluator.py  get_eval.py  panoptic_evaluation.py  sem_seg_evaluation.py  utils.py
focoos/hub/: __init__.py  api_client.py  focoos_hub.py  remote_dataset.py  remote_model.py
focoos/infer/: infer_model.py  quantizer.py
focoos/model_registry/: bisenetformer-l-ade.json  bisenetformer-m-ade.json  bisenetformer-s-ade.json  eomt-l-ade.json  eomt-l-coco-ins.json  eomt-m-ade.json  (+31 more)
gradio/: app.py
hub/: index.html
inference/: index.html
model_registry/: fai-rtdetr-l-coco.json  fai-rtdetr-l-obj365.json  fai-rtdetr-m-coco.json  fai-rtdetr-s-coco.json
models/: index.html
notebooks/: .dataset.ipynb  .monitor.ipynb  _playground.ipynb  concrete.ipynb  dashboard.ipynb  dataset.ipynb  datasets.ipynb  hub.ipynb  inference.ipynb  model_management.ipynb  modelling.ipynb  playground.ipynb  ray_serve.ipynb  training.ipynb  user_info.ipynb  utils.py
ops/: test_export.py  test_training.py  test_validation.py
pruning-test/: benchmark_focoos_model.py  eval_cls.py  export.py  layers_to_prune.py  pruning_and_benchmark.py  save_model_state_dict.ipynb
quantization/: index.html
scripts/: classification_dataset_example.py  dataset_augmentations.py  prune.py  training.py  validation.py
search/: search_index.json
setup/: index.html
test/: test_system.py
tests/: __init__.py  conftest.py  helpers.py  test_api_client.py  test_backbone.py  test_focoos.py  test_focoos_hub.py  test_infer_model.py  test_local_model.py  test_model_manager.py  test_model_registry.py  test_ports.py  test_remote_dataset.py  test_remote_model.py  test_runtime.py  test_system.py
training/: index.html
tutorials/: convert_dataset_ninja.ipynb  hub.ipynb  inference.ipynb  pruning.ipynb  quantize_classification.ipynb  training.ipynb
(+253 files in other folders)
