[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["focoos**"]

[project]
name = "focoos"
version = "0.4.1"
description = "Focoos SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "Pillow~=10.4.0",
    "supervision~=0.24.0",
    "pydantic~=2.8.2",
    "pydantic-settings~=2.5.0",
    "tqdm~=4.67.1",
    "numpy~=1.26.4",
    "scipy~=1.14.1",
    "gputil~=1.4.0",
    "psutil~=6.1.1",
    "setuptools~=75.6.0",
]

authors = [{ name = "focoos.ai", email = "info@focoos.ai" }]
keywords = [
    "computer_vision",
    "object_detection",
    "segmentation",
    "model_serving",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "isort",
    "black",
    "flake8",
    "python-dotenv",
    "gradio~=5.3.0",
    "sniffio~=1.2.0",
]
docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.28,<10.0.0",
    "mkdocstrings[python]>=0.25.1,<0.26.0",
    "mkdocs-include-markdown-plugin>=6.2.1,<7.0.0",
]
cpu = ["onnxruntime==1.20.1"]
gpu = ["onnxruntime-gpu==1.20.1","nvidia-cuda-runtime-cu12==12.4.127"]
tensorrt = ["tensorrt==10.5.0"]
