[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"



[tool.ruff]
line-length = 120
lint.select = ["E", "F"]
lint.extend-select = ["I"]
lint.ignore = ["E501"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 160

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
include = ["focoos**"]

[project]
name = "focoos"
version = "0.8.0"
description = "Focoos SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "Pillow~=10.4.0",
    "supervision~=0.25.1",
    "opencv-python~=4.11.0",
    "pydantic~=2.10.5",
    "pydantic-settings~=2.7.1",
    "tqdm~=4.67.1",
    "numpy~=2.2.1",
    "scipy~=1.14.1",
    "gputil~=1.4.0",
    "psutil~=6.1.1",
    "setuptools~=75.7.0",
    "matplotlib~=3.10.0",
    "colorama~=0.4.6",
    "ipython~=8.31.0",
]

authors = [{ name = "focoos.ai", email = "info@focoos.ai" }]
keywords = [
    "computer_vision",
    "object_detection",
    "segmentation",
    "model_serving",
]

[project.optional-dependencies]
cpu = ["onnxruntime==1.20.1"]
gpu = ["onnxruntime-gpu==1.20.1","nvidia-cuda-runtime-cu12==12.4.127"]
tensorrt = ["tensorrt==10.5.0"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "python-dotenv",
    "gradio~=5.10.0",
    "pre-commit~=4.0.1",
    "sniffio~=1.3.1",
    "ipykernel~=6.29.5",
    "tox",
    "tox-uv",
]
docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.28,<10.0.0",
    "mkdocstrings[python]>=0.25.1,<0.26.0",
    "mkdocs-include-markdown-plugin>=6.2.1,<7.0.0",
]
