[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 120
lint.select = ["E", "F"]
lint.extend-select = ["I"]
lint.ignore = ["E501"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 160

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
include = ["focoos**"]

[tool.setuptools.package-data]
"focoos.model_registry" = ["*.json"]


[project]
name = "focoos"
version = "0.18.1"
description = "Focoos SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "Pillow~=10.2.0",
    "supervision~=0.26.0",
    "opencv-python~=4.11.0.86",
    "pydantic~=2.11.4",
    "pydantic-settings~=2.8.1",
    "tqdm~=4.67.1",
    "numpy~=2.2.6",
    "scipy~=1.14.1",
    "psutil~=7.0.0",
    "matplotlib~=3.10.1",
    "colorama~=0.4.6",
    "ipython",
    "shapely~=2.1.0",
    "fvcore~=0.1.4",
    "pycocotools~=2.0.8",
    "faster_coco_eval~=1.6.6",
    "tensorboard~=2.19.0",
    "orjson~=3.10.18",
    "gradio~=5.31.0",
    "torch~=2.7.1",
    "torchvision~=0.22.0",
    "typer>=0.16.0",
]

authors = [{ name = "focoos.ai", email = "info@focoos.ai" }]
keywords = [
    "computer_vision",
    "object_detection",
    "segmentation",
    "model_serving",
]

[project.optional-dependencies]
tensorrt = ["tensorrt==10.5.0"]
onnx = [
    "onnxruntime-gpu==1.22.0",
    "onnx>=1.18.0",
    "onnxslim~=0.1.59",
    "onnxscript~=0.3.1",
]
onnx-cpu = [
    "onnxruntime==1.22.0",
    "onnx>=1.18.0",
    "onnxslim~=0.1.59",
    "onnxscript~=0.3.1",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "python-dotenv",
    "pre-commit~=4.2.0",
    "sniffio~=1.3.1",
    "ipykernel~=6.29.5",
    "tox",
    "tox-uv",
]
docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.28,<10.0.0",
    "mkdocstrings[python]>=0.29.0,<0.30.0",
    "mkdocs-include-markdown-plugin>=6.2.1,<7.0.0",
]

[project.scripts]
focoos = "focoos.cli.cli:app"

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12"
requires-dist = ["tensorrt-cu12-bindings", "tensorrt-cu12-libs"]
[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12-libs"
requires-dist = ["nvidia-cuda-runtime-cu12"]
